test/asm/nested-brackets.err
ERROR: nested-brackets.asm(5):
    Missing }
