test/asm/nested-brackets.asm
STRING equs "OK"
WRAPPER equs "TRIN"
	PRINTT "{S{WRAPPER}G}\n"

	PRINTT "{S{WRAPPER}G"
